<resources>
    <string name="app_name">Al Quran</string>
    <string name="des_upper_design">Upper design</string>
    <string name="des_full_logo">Full logo</string>
    <string name="des_round_logo">Round logo</string>
    <string name="des_arrow">Get started arrow</string>
    <string name="login">Login</string>
    <string name="des_login_message">Login message</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="facebook">Facebook</string>
    <string name="apple">Apple</string>
    <string name="google">Google</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_here">New here?</string>
    <string name="register_now">Register Now</string>
    <string name="log_in_to_your_account_to_get_started">Log in to your account to get started.</string>
    <string name="name_star">Name*</string>
    <string name="mobile_number_star">Mobile Number*</string>
    <string name="register_your_account_if_you_are_new_here">Register your account if you are new here.</string>
    <string name="register">Register</string>
    <string name="email_address_star">Email Address*</string>
    <string name="password_star">Password*</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="enter_your_account_phone_number_and_we_will_send_you_an_otp_to_reset_your_password">Enter your account phone number and we will send you an OTP to reset your password.</string>
    <string name="forgot_password_no_question_mark">Forgot Password</string>
    <string name="email">Email</string>
    <string name="create_new_password">Create New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm_phone_number">Confirm Phone Number</string>
    <string name="we_have_sent_an_otp_to_your_phone_number_enter_your_otp_to_confirm_your_account">We have sent an OTP to your phone number. Enter your OTP to confirm your account.</string>
    <string name="did_not_get_a_code">Didn’t get a code?</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="time_dummy">00:30</string>
    <string name="all_surah">সব সূরা:</string>
    <string name="al_fatiha">১। আল-ফাতিহা</string>
    <string name="arabic_example">الفَاتِحَة</string>
    <string name="surah">সূরা</string>
    <string name="page">পৃষ্ঠা</string>
    <string name="para">পারা</string>
    <string name="hijb">হিজব</string>
    <string name="name_al_fatiha">আল-ফাতিহা</string>
    <string name="detail_dummy">পারাঃ১ পৃষ্ঠাঃ২</string>
    <string name="dummy_one">১</string>
    <string name="dummy_verse">ٱلْحَمْدُ    لِلَّهِ    رَبِّ    ٱلْعَـٰلَمِينَ</string>
    <string name="dummy_time">1:30s</string>
    <string name="audio">অডিও</string>
    <string name="start">শুরু</string>
    <string name="end">শেষ</string>
    <string name="kari">ক্বারি</string>
    <string name="repeat_every_verse">প্রতি আয়াত পুনরাবৃত্তি</string>
    <string name="okay">ঠিক আছে</string>
    <string name="yes">হ্যাঁ</string>
    <string name="no">না</string>
    <string name="dummy_kari">Ayman Suwaid</string>
    <string name="one">১</string>
    <string name="al_fatiha_name">আল-ফাতিহা</string>
    <string name="dummy_ayyat">আয়াতঃ ২</string>
    <string name="dummy_arabic_to_bangla">যাবতীয় প্রশংসা জগৎসমূহের প্রতিপালক আল্লাহরই জন্য</string>
    <string name="dummy_word">জগৎসমূহের যিনি রব আল্লাহর যাবতীয় প্রশংসা</string>
    <string name="arabic">আরবি:</string>
    <string name="line_icon">Line icon</string>
    <string name="note">নোট:</string>
    <string name="dummy_note">এখানে নোট করা হল</string>
    <string name="bangla_bayan_fnd">বাংলা-Bayaan Foundation:</string>
    <string name="verse_dummy">পরম করুণাময় অতি দয়ালু আল্লাহর নামে।</string>
    <string name="verse_dummy2">অনন্ত করুণাময় পরম দয়ালু আল্লাহর নামে (আরম্ভ করছি)।  \'বিসমিল্লাহ\'র পূর্বে \'আক্বরাউ\' \'আবদাউ\' অথবা \'আতলু\' ফে\'ল (ক্রিয়া) উহ্য আছে। অর্থাৎ, আল্লাহর নাম নিয়ে পড়ছি অথবা শুরু করছি কিংবা তেলাঅত আরম্ভ করছি। প্রত্যেক গুরুত্বপূর্ণ কাজ আরম্ভ করার পূর্বে \'বিসমিল্লাহ\' পড়ার প্রতি তাকীদ করা হয়েছে। সুতরাং নির্দেশ করা হয়েছে যে, খাওয়া, যবেহ করা, ওযু করা এবং সহবাস করার পূর্বে \'বিসমিল্লাহ\' পড়। অবশ্য ক্বুরআনে করীম তেলাঅত করার সময় \'বিসমিল্লাহির রাহমানির রাহীম\' পড়ার পূর্বে \'আউযু বিল্লাহি মিনাশ্শায়ত্বানির রাজীম\' পড়াও অত্যাবশ্যক। মহান আল্লাহ বলেছেন, "অতএব যখন তুমি ক্বুরআন পাঠ করবে, তখন বিতাড়িত শয়তান থেকে আল্লাহর আশ্রয় প্রার্থনা কর।" (সূরা নাহল ১৬:৯৮ আয়াত)।</string>
    <string name="bangla_ahsanul">বাংলা-Tafsir Ahsanul Bayaan:</string>
    <string name="all_planner">সকল প্লানার</string>
    <string name="add_plan">Add plan</string>
    <string name="make_planner">প্লানার তৈরি করুন</string>
    <string name="not_found">Not found</string>
    <string name="planner_name">প্লানার এর নাম</string>
    <string name="planner_start">প্লানার শুরু</string>
    <string name="planner_end">প্লানার শেষ</string>
    <string name="day_conunt">দিনের সংখ্যা</string>
    <string name="dummy_three">৩</string>
    <string name="notification">নোটিফিকেশন</string>
    <string name="planner2">প্লানার ২</string>
    <string name="icon">Icon</string>
    <string name="dummy1">আল-ফাতিহা থেকে আল-বাকারাহ</string>
    <string name="dummy2">এখন আছেন - আল-ফাতিহা</string>
    <string name="dummy3">8%</string>
    <string name="sunday">Sun</string>
    <string name="dummy_date">17</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="location">Location</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="repeat_password">Repeat password</string>
    <string name="_06_2022">জুন 06, 2022</string>
    <string name="_05_19_pm">05:19 PM</string>
    <string name="don_t_forget_to_fast_on_the_days_of_al_beed">Don’t forget to fast on the days of al-beed!!</string>
    <string name="rate_us">Rate Us</string>
    <string name="write_msg">আপনার ম্যাসেজ লিখুন...</string>
    <string name="read">পরুন</string>
    <string name="send">পাঠান</string>
    <string name="menu">Menu</string>
    <string name="account">অ্যাকাউন্ট</string>
    <string name="q_d">কুরান ডিকশনারি</string>
    <string name="sadgay_j">সদকায় জারিয়া</string>
    <string name="give_feedback">ফিডব্যাক দিন</string>
    <string name="share">শেয়ার করুন</string>
    <string name="settings">সেটিংশ</string>
    <string name="logout">লগ আউট</string>
    <string name="bangla">বাংলাঃ</string>
    <string name="english">English:</string>
    <string name="theme">Theme</string>
    <string name="font">Font</string>
    <string name="language">Language</string>
    <string name="tajweed_color">Tajweed Color</string>
    <string name="tafsir_mode_press">Tafsir mode (Press)</string>
</resources>