<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_background">

    <ImageView
        android:scaleY="1.1"
        android:scaleX="1.05"
        android:id="@+id/logo_full"
        android:src="@drawable/start_screen_upper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="13:7"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/des_upper_design" />

    <!-- Material Card view can not be used here as
    raster image is used as background -->

    <RelativeLayout
        android:id="@+id/get_started"
        android:gravity="center"
        android:background="@drawable/get_started"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/des_round_logo">
        <ImageView
            android:layout_marginStart="150dp"
            android:src="@drawable/ic_round_double_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/des_arrow" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
