<LinearLayout android:background="@drawable/task_card"
    android:layout_marginEnd="30dp"
    android:layout_marginStart="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlSymmetry">
        <TextView
            android:fontFamily="@font/siliguri"
            android:textSize="15sp"
            android:text="@string/don_t_forget_to_fast_on_the_days_of_al_beed"
            android:layout_marginEnd="95dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="-95dp"
            android:layout_width="95dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginEnd="15dp"
                android:gravity="end"
                android:textSize="15sp"
                android:fontFamily="@font/siliguri"
                android:text="@string/_06_2022"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginEnd="15dp"
                android:gravity="end"
                android:textSize="15sp"
                android:fontFamily="@font/siliguri"
                android:text="@string/_05_19_pm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>